--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "require": {
-        "phpmd/phpmd": "^2.6"
+        "phpmd/phpmd": "^2.6",
+        "phpunit/phpunit": "6"
     },
     "require-dev": {
-        "phpunit/phpunit": "6"
     }
 }
