--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "phpmd/phpmd": "^2.6",
-        "phpunit/phpunit": "6"
+        "phpunit/phpunit": "6",
+        "altorouter/altorouter": "1.1"
     },
     "require-dev": {
     }
