--- a/api/composer.json
+++ b/api/composer.json
@@ -6,5 +6,12 @@
     },
     "require": {
         "altorouter/altorouter": "1.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "controller\\": "src/Controller/",
+            "model\\": "src/Model/",
+            "view\\": "src/View/"
+        }
     }
 }
