--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "phpmd/phpmd": "^2.6",
-        "altorouter/altorouter": "1.1"
+        "altorouter/altorouter": "1.1",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "6"
